--- a/Stage-03/Responsividade/Desafio-01/style.css
+++ b/Stage-03/Responsividade/Desafio-01/style.css
@@ -10,110 +10,146 @@
   font-size: 62.5%;
 }
 
-body {
-  font-family: "Source Serif 4", serif;
-  font-size: 1.4rem;
-  font-weight: 400;
-  line-height: 1.8rem;
 
-  color: #a54328;
+body {  
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   
   background: #fff;
+  color: #A54328;
+  
+  font-family: "Source Serif 4", serif;
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 1.8rem;
 }
 
 main {
-  max-width: 32rem;
-  
-  padding: 5.7rem 3.7rem;
-  
+  padding: 5.3rem 3.7rem;
   box-sizing: content-box;
   
-  display: flex;
-  flex-direction: column;
-  gap: 3.2rem;
-  
-  margin-inline: auto;
+  max-width: 31.9rem;
 }
 
 h1, h2 {
-  font-size: 2.8rem;
+  font-size: 2.9rem;
   font-weight: 700;
-  line-height: 3.8rem;
+  line-height: 3.6rem;
 }
 
-img {
-  width: 30.0rem;
-  height: 17.7rem;
+main img {
+  max-width: 100%;
+  margin: 4.7rem 0 4.7rem;
+}
 
-  margin: 6.6rem 0 6.6rem;
+.ingredients {
+  margin-top: 3.4rem;
 }
 
 h2 {
-  margin-bottom: 3.2rem;
+  margin-bottom: 3.4rem;
 }
 
 ul {
-  margin-bottom: 2.4rem;
+  margin-bottom: 2.0rem;
 }
 
-ul, ol {
-  padding-left: 2.4rem;
+ul li, ol li {
+  margin-left: 2.0rem;
 }
-
 
 button {
-  font-family: "Source Serif 4", serif;
+  width: 9.5rem;
+  height: 3.2rem;
   
-  background: #a54328;
-  color: #fff;
-  
-  margin-top: 3.2rem;
-  padding: 0.8rem 1.2rem;
-  
-  border-radius: 0.6rem;
+  padding: 1.2rem;
+
   border: none;
-  
-  
+  border-radius: 0.6rem;
+ 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+
+  background: #A54328;
+  color: #FFF;
+
+  font-family: Source Serif 4;
+  font-size: 1.0rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+
+  text-align: center;
+
+  margin-top: 1.7rem;
+
   cursor: pointer;
 }
 
 button:hover {
-  background: #bf6248;
-
+  background: #741e07;
   font-weight: bold;
+
   transition: 2.0ms;
 }
 
-@media (min-width: 768px) {
+
+@media (min-width:768px) {
   body {
-    background: url(./img/backgroud.png);
+    background: url(img/backgroud.png), lightgray 50% / cover no-repeat;    
+
+    font-size: 2.0rem;
+    line-height: 2.5rem;
   }
 
   main {
+    display: flex;
     flex-direction: row;
     max-width: fit-content;
-    gap: 10.0rem;
-    padding: 9rem 6rem;
+    gap: 14.0rem;
+    padding: 4.0rem 4.0rem;
   }
 
   main > div {
     flex: 1;
-    max-width: 43.5rem;
+  }
+
+  h1, h2 {
+    font-size: 4.0rem;
+    line-height: 5.0rem;
+  }
+  img {
+    width: 41.1rem;
+
+    margin: 6.7rem 6.7rem;
   }
 
   .ingredients {
-    max-width: 52.5rem;
+    margin: 0;
+
+    width: 53.5rem;
   }
 
-  button{
-    padding: 1rem 2rem;
+  button {
+    width: 13.3rem;
+    height: 4.5rem;
+    padding: 1.6rem;
+    
+    gap: 1.0rem;
+
     font-size: 1.4rem;
     line-height: 2.4rem;
+
+    margin-top: 3.4rem;
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width:1024px) {
   main {
     gap: 18.9rem;
+
+    padding: 7.0rem 9.0rem;
   }
-}
+} 
